Version 1.23.7 - Feb. 24, 2019
Support V3 hidden services
Fixed filtermodkick setting
fixed restore_backup not encrypting notes

Version 1.23.6 - Apr. 22, 2018
Added Czech, Italian and Ukrainian translation
Updated Russian translation
Bugfixes

Version 1.23.5 - Sep. 1, 2017
Added Russian and Bulgarian translation
Updated Spanish translation
Bugfixes and optimizations

Version 1.23.4 - Jan. 23, 2017
Fix update from older versions

Version 1.23.3 - Jan. 17, 2017
Fix restoring members in backup and restore

Version 1.23.2 - Jan. 1, 2017
Restructure initalization code to fix setting up new chats

Version 1.23.1 - Dec. 30, 2016
Replace configurable static size for notes and post textarea with css
Let offline members be ignored
Force space after /me to prevent posting "as someone else"
Prevent non-admins from loging in incognito via setup

Version 1.23 - Dec. 25, 2016
Optimizations
More secure session key generation and password storage
Add option to make your own font small
Separate changing nickname and password
Use PHPs native timezones
Add message asking for manual refresh, when it stopped working
Add personal notes
Allow disabling applying of kick filters on moderators

Version 1.22.1 - Nov. 13, 2016
Performance optimizations
Fix initialization on first setup

Version 1.22 - Oct. 29, 2016
Add logout button to session view and allow unbanning kicked sessions
Allow changing message sort direction
Don't escape CSS (fixes use of html entities)
Allow changing frame sorting
Allow making filters case sensitive
Add option to hide the list of chatters
Make nicknames in the chatters list clickable to send PMs more easily
Add better multi-byte character support - New dependency: mbstring extension
Don't send messages to inbox when in incognito
Remove up to three characters from the end of @mention to also match @mention, etc.
Make colour input use colorChooser, if supported
Add integrated file upload support